[workspace]
resolver = "2"
members = [
    "ggml-aio-sys",
    "llama-cpp-rs",
    "sense-voice-cpp-rs",
    "whisper-cpp-rs",
]

[workspace.dependencies]
# core library deps
thiserror = "1"
tracing = "0.1"
tracing-core = "0.1"
hf-hub = { version = "0.4.3" }
criterion = "0.5.1"
pprof = "0.13.0"
bindgen = "0.69.5"
cc = "1.2.49"
anyhow = "1.0.98"
clap = "4.5.53"
encoding_rs = "0.8.35"
tracing-subscriber = { version = "0.3", features = ["json"] }
ggml-aio-sys = { path = "ggml-aio-sys" }


[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }
