[package]
name = "ggml-aio-sys"
description = "Low Level Bindings to ggml related projects"
version = "0.1.103"
edition = "2024"
license = "MIT OR Apache-2.0"

include = [
    # Required metadata & build files
    "README.md",
    "LICENSE*",
    "wrapper.h",
    "build.rs",

    # Your crate's Rust code
    "src/**",

    # ggml core
    "cc/ggml/include/*.h",
    "cc/ggml/src/**/*.[ch]", # .c, .cpp, .h

    # llama.cpp essentials
    "cc/llama.cpp/include/**/*.h",
    "cc/llama.cpp/src/**/*.[ch]",
    "cc/llama.cpp/common/*.h",
    "cc/llama.cpp/common/*.cpp",       # only what's actually needed
    "cc/llama.cpp/ggml/src/**/*.[ch]",
    "cc/llama.cpp/vendor/**/*.[ch]",


    # whisper.cpp essentials
    "cc/whisper.cpp/include/whisper.h",
    "cc/whisper.cpp/src/**/*.[ch]",

    # sense-voice.cpp
    "cc/sense-voice.cpp/include/*.h",
    "cc/sense-voice.cpp/src/**/*.[ch]",

    # CMake infrastructure
    "cc/**/CMakeLists.txt",
    "cc/**/cmake/**/*.cmake",
]


[dependencies]

[build-dependencies]
cc = "1.2.19"
cmake = "0.1"
find_cuda_helper = "0.2.0"
glob = "0.3.2"
walkdir = "2"
bindgen = "0.71"
cfg-if = "1"
fs_extra = "1.3"


[features]
cuda = []
# Disables the need to dynamically link against libcuda.so / cuda.dll
cuda-no-vmm = ["cuda"]
hipblas = []
metal = []
dynamic-link = []
vulkan = []
native = []
openmp = []
# Only has an impact on Android.
shared-stdcxx = []
