[package]
name = "llama-cpp-rs"
description = "llama.cpp bindings for Rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.11"
ggml-aio-sys = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
encoding_rs = { workspace = true }

[features]
default = ["android-shared-stdcxx"]
cuda = ["ggml-aio-sys/cuda"]
hipblas = ["ggml-aio-sys/hipblas"]
metal = ["ggml-aio-sys/metal"]
vulkan = ["ggml-aio-sys/vulkan"]
openmp = ["ggml-aio-sys/openmp"]
sampler = []
# Only has an impact on Android.
android-shared-stdcxx = ["ggml-aio-sys/shared-stdcxx"]


[lints]
workspace = true

[package.metadata.docs.rs]
features = ["sampler"]
